--- a/SdWorx.FeatureToggle/FeatureToggle.Api/FeatureToggle.Api.csproj
+++ b/SdWorx.FeatureToggle/FeatureToggle.Api/FeatureToggle.Api.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FeatureToggle.Domain\FeatureToggle.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
