--- a/SdWorx.FeatureToggle/FeatureToggle.Api/Properties/launchSettings.json
+++ b/SdWorx.FeatureToggle/FeatureToggle.Api/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "Toggle.Api": {
+    "FeatureToggle.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
