--- a/SdWorx.FeatureToggle/FeatureToggle.Application/FeatureToggle.Application.csproj
+++ b/SdWorx.FeatureToggle/FeatureToggle.Application/FeatureToggle.Application.csproj
@@ -1,18 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.0.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FeatureToggle.Application\FeatureToggle.Application.csproj" />
     <ProjectReference Include="..\FeatureToggle.Domain\FeatureToggle.Domain.csproj" />
   </ItemGroup>
 
