Add Infrastructure layer to separate concern of persistance from other layers.

--- a/SdWorx.FeatureToggle/FeatureToggle.Api/appsettings.Development.json
+++ b/SdWorx.FeatureToggle/FeatureToggle.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "FeatureToggle": "Data Source=localhost; Initial Catalog=FeatureToggle; Integrated Security=true"
   }
 }
