--- a/SdWorx.FeatureToggle/FeatureToggle.Api/FeatureToggle.Api.csproj
+++ b/SdWorx.FeatureToggle/FeatureToggle.Api/FeatureToggle.Api.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\FeatureToggle.Application\FeatureToggle.Application.csproj" />
     <ProjectReference Include="..\FeatureToggle.Domain\FeatureToggle.Domain.csproj" />
+    <ProjectReference Include="..\FeatureToggle.Infrastructure\FeatureToggle.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
