Add now necessary part to connection string for cert.

--- a/src/FeatureToggle.Api/appsettings.Development.json
+++ b/src/FeatureToggle.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "FeatureToggle": "Data Source=localhost; Initial Catalog=FeatureToggle; Integrated Security=true"
+    "FeatureToggle": "Data Source=localhost; Initial Catalog=FeatureToggle; Integrated Security=true; TrustServerCertificate=true"
   }
 }
