Run unit tests with main_feature-toggles-api.yml

--- a/.github/workflows/main_feature-toggles-api.yml
+++ b/.github/workflows/main_feature-toggles-api.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
+      - name: dotnet unit tests
+        run: dotnet test tests/FeatureToggle.Application.Tests.Unit/FeatureToggle.Application.Tests.Unit.csproj
+
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
