--- a/.github/workflows/main_feature-toggles-api.yml
+++ b/.github/workflows/main_feature-toggles-api.yml
@@ -29,8 +29,8 @@ jobs:
         run: dotnet test tests/FeatureToggle.Application.Tests.Unit/FeatureToggle.Application.Tests.Unit.csproj
 
       - name: dotnet integration tests
-        run: dotnet test tests/FeatureToggle.Application.Tests.Integration/FeatureToggle.Application.Tests.Integration.csproj
-
+        run: dotnet test tests/FeatureToggle.Api.Tests.Integration/FeatureToggle.Api.Tests.Integration.csproj
+        
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
